--- a/index.html
+++ b/index.html
@@ -182,66 +182,131 @@
 
           <div class="filtr-container">
             <div class="filtr-item" data-category="1" data-sort="mitigation">
+              <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/mitigation.png" alt="mitigation" />
+
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">Mitigation Sites</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="1" data-sort="Natural Resource Inventory">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/nri.png" alt="Natural Resource Inventory" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">Natural Resources</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="1" data-sort="Wetlands">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/wetlands.png" alt="Wetlands" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">Wetlands</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="2" data-sort="PDX Enplane Floorplans">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/floorplan-1.png" alt="PDX Enplane Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">PDX Floorplans 2nd</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="2" data-sort="PDX Deplane Floorplans">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/floorplan-2.png" alt="PDX Deplane Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">PDX Floorplans 1st</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="2" data-sort="PDX Mezzanine Floorplans">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/floorplan-3.png" alt="PDX Mezzanine Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">PDX Floorplans 3rd</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="3" data-sort="PDX Noise Contours 1982">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/pdx-noise-1982.png" alt="PDX Noise Contours 1982" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">PDX Noise Contours 1982</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="3" data-sort="PDX Noise Contours 1990">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/pdx-noise-1990.png" alt="PDX Noise Contours 1990" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">PDX Noise Contours 1990</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="3" data-sort="PDX Noise Contours 1994">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/pdx-noise-1994.png" alt="PDX Noise Contours 1994" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">PDX Noise Contours 1994</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="3" data-sort="PDX Noise Contours 2008">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/pdx-noise-2008.png" alt="PDX Noise Contours 2008" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
                   download="monster.json" target="_blank">PDX Noise Contours 2008</a></span>
             </div>
+
+
             <div class="filtr-item" data-category="1, 4" data-sort="Storm Water Pipes">
+                <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data-json-test/blob/master/monster.json" target="_blank"><i
+                    class="fas fa-eye"></i></a>
+              </div>
               <img class="img-responsive" src="assets/img/storm-pipes.png" alt="Storm Water Pipes" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data-json-test/master/monster.json"
@@ -406,9 +471,8 @@
       Turf, Bootstrap and Mapbox GL.
       It's basically a starting point to easily attach additional Turf.js spatial analysis tools.
       What's already included is a lat/lng finder, center of mass, buffer, great circle, polygon grid, feature
-      measurement, and coordinate array. Check it out at <a
-      href="https://github.com/portofportlandgis/portmap-analyst" target="_blank" style="color: #1d1d1d;"><i
-        class="fab fa-github"></i> GitHub.</a>
+      measurement, and coordinate array. Check it out at <a href="https://github.com/portofportlandgis/portmap-analyst"
+        target="_blank" style="color: #1d1d1d;"><i class="fab fa-github"></i> GitHub.</a>
     </p>
 
     <br>
