add hydrants data

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-mitigation-sites.json"
-                  download="monster.json" target="_blank">Mitigation Sites</a></span>
+                  download="data.json" target="_blank">Mitigation Sites</a></span>
             </div>
 
 
@@ -213,7 +213,7 @@
               <img class="img-responsive" src="assets/img/nri.png" alt="Natural Resource Inventory" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-natural-resource-inventory.json"
-                  download="monster.json" target="_blank">Natural Resources</a></span>
+                  download="data.json" target="_blank">Natural Resources</a></span>
             </div>
 
 
@@ -225,7 +225,7 @@
               <img class="img-responsive" src="assets/img/wetlands.png" alt="Wetlands" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-wetlands.json"
-                  download="monster.json" target="_blank">Wetlands</a></span>
+                  download="data.json" target="_blank">Wetlands</a></span>
             </div>
 
 
@@ -237,7 +237,7 @@
               <img class="img-responsive" src="assets/img/floorplan-1.png" alt="PDX Enplane Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-floor-plan-1.json"
-                  download="monster.json" target="_blank">PDX Floorplans 2nd</a></span>
+                  download="data.json" target="_blank">PDX Floorplans 2nd</a></span>
             </div>
 
 
@@ -249,7 +249,7 @@
               <img class="img-responsive" src="assets/img/floorplan-2.png" alt="PDX Deplane Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-floor-plan-2.json"
-                  download="monster.json" target="_blank">PDX Floorplans 1st</a></span>
+                  download="data.json" target="_blank">PDX Floorplans 1st</a></span>
             </div>
 
 
@@ -261,7 +261,7 @@
               <img class="img-responsive" src="assets/img/floorplan-3.png" alt="PDX Mezzanine Floorplans" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-floor-plan-3.json"
-                  download="monster.json" target="_blank">PDX Floorplans 3rd</a></span>
+                  download="data.json" target="_blank">PDX Floorplans 3rd</a></span>
             </div>
 
 
@@ -273,7 +273,7 @@
               <img class="img-responsive" src="assets/img/pdx-noise-1982.png" alt="PDX Noise Contours 1982" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-noise-contours-1982.json"
-                  download="monster.json" target="_blank">PDX Noise Contours 1982</a></span>
+                  download="data.json" target="_blank">PDX Noise Contours 1982</a></span>
             </div>
 
 
@@ -285,7 +285,7 @@
               <img class="img-responsive" src="assets/img/pdx-noise-1990.png" alt="PDX Noise Contours 1990" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-noise-contours-1990.json"
-                  download="monster.json" target="_blank">PDX Noise Contours 1990</a></span>
+                  download="data.json" target="_blank">PDX Noise Contours 1990</a></span>
             </div>
 
 
@@ -297,7 +297,7 @@
               <img class="img-responsive" src="assets/img/pdx-noise-1994.png" alt="PDX Noise Contours 1994" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-noise-contours-1994.json"
-                  download="monster.json" target="_blank">PDX Noise Contours 1994</a></span>
+                  download="data.json" target="_blank">PDX Noise Contours 1994</a></span>
             </div>
 
 
@@ -309,7 +309,7 @@
               <img class="img-responsive" src="assets/img/pdx-noise-2008.png" alt="PDX Noise Contours 2008" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-noise-contours-2008.json"
-                  download="monster.json" target="_blank">PDX Noise Contours 2008</a></span>
+                  download="data.json" target="_blank">PDX Noise Contours 2008</a></span>
             </div>
 
 
@@ -321,7 +321,7 @@
               <img class="img-responsive" src="assets/img/storm-pipes.png" alt="Storm Water Pipes" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-pipes.json"
-                  download="monster.json" target="_blank">Storm Water Pipes</a></span>
+                  download="data.json" target="_blank">Storm Water Pipes</a></span>
             </div>
 
 
@@ -347,6 +347,17 @@
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-tax-lots.json"
                   download="data.json" target="_blank">Port Tax Lots</a></span>
+            </div>
+
+            <div class="filtr-item" data-category="4" data-sort="Fire Hydrants">
+              <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data/blob/master/pop-fire-hydrants.json"
+                  target="_blank"><i class="fas fa-eye"></i></a>
+              </div>
+              <img class="img-responsive" src="assets/img/fire-hydrants.png" alt="PDX Noise Contours 1994" />
+              <span class="item-desc"><a
+                  href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-fire-hydrants.json"
+                  download="data.json" target="_blank">Fire Hydrants</a></span>
             </div>
 
 
