--- a/index.html
+++ b/index.html
@@ -325,10 +325,10 @@
             </div>
 
             <div class="filtr-item" data-category="1, 4" data-sort="Storm Catch Basins">
-              <div class="eyeball"><a
+              <!-- <div class="eyeball"><a
                   href="https://github.com/portofportlandgis/open-data/blob/master/pop-stormwater-catch-basins.json"
                   target="_blank"><i class="fas fa-eye"></i></a>
-              </div>
+              </div> -->
               <img class="img-responsive" src="assets/img/catch-basins.png" alt="Storm Manholes" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-catch-basins.json"
@@ -347,10 +347,10 @@
             </div>
 
             <div class="filtr-item" data-category="1, 4" data-sort="Storm Manholes">
-              <div class="eyeball"><a
+              <!-- <div class="eyeball"><a
                   href="https://github.com/portofportlandgis/open-data/blob/master/pop-stormwater-manholes.json"
                   target="_blank"><i class="fas fa-eye"></i></a>
-              </div>
+              </div> -->
               <img class="img-responsive" src="assets/img/manholes.png" alt="Storm Water Pipes" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-manholes.json"
