add to code section

--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
     <a href="https://github.com/gorillalabs/go-powershell/backend" target="_blank" style="color: #1d1d1d;"> <b>github.com/gorillalabs/go-powershell/backend </b></a>
     package to "shell out" to PowerShell, fire up a WinRM session, 
     and perform the actual DNS work. This provider was built because the Go WinRM packages only supported WinRM in Basic/Unencrypted mode, 
-    which is not doable in our environment. 
+    which is not doable in some environments. 
 
     <br> 
     <br> 
@@ -723,7 +723,7 @@
     The provider uses the <a href="https://github.com/gorillalabs/go-powershell/backend" target="_blank" style="color: #1d1d1d;"> <b>github.com/gorillalabs/go-powershell/backend </b></a> 
     package to "shell out" to PowerShell, fire up a WinRM session, 
     and perform the actual script work. This provider was built because the Go WinRM packages only supported WinRM in Basic/Unencrypted mode, 
-    which is not doable in our environment.
+    which is not doable in some environments.
     
     <br> 
     <br> 
