--- a/index.html
+++ b/index.html
@@ -315,6 +315,28 @@
                   download="data.json" target="_blank">PDX Noise Contours 2008</a></span>
             </div>
 
+            <div class="filtr-item" data-category="3" data-sort="PDX FAR77">
+              <!-- <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data/blob/master/pdx-far-77.json"
+                  target="_blank"><i class="fas fa-eye"></i></a>
+              </div> -->
+              <img class="img-responsive" src="assets/img/pdx-far-77.png" alt="PDX FAR77" />
+              <span class="item-desc"><a
+                  href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-far-77.json"
+                  download="data.json" target="_blank">PDX FAR77</a></span>
+            </div>
+
+            <div class="filtr-item" data-category="3" data-sort="PDX RPZ">
+              <div class="eyeball"><a
+                  href="https://github.com/portofportlandgis/open-data/blob/master/pdx-rpz.json"
+                  target="_blank"><i class="fas fa-eye"></i></a>
+              </div>
+              <img class="img-responsive" src="assets/img/pdx-rpz.png" alt="PDX RPZ" />
+              <span class="item-desc"><a
+                  href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pdx-rpz.json"
+                  download="data.json" target="_blank">PDX RPZ</a></span>
+            </div>
+
 
             <div class="filtr-item" data-category="1, 4" data-sort="Storm Water Pipes">
               <!-- <div class="eyeball"><a
