add wording for metadata

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 
       <br>
 
-      <p style="color: #525252" class="text-center">Get data directly from <a
-          href="https://github.com/portofportlandgis/open-data" target="_blank" style="color: #1d1d1d;"><i
+      <p style="color: #525252" class="text-center">Find the data and metadata on <a
+          href="https://github.com/portofportlandgis/open-data" target="_blank" style="color: #1c8de0;"><i
             class="fab fa-github"></i> <b>Github</b></a>, or search for layers below:</p>
 
       <br>
@@ -421,6 +421,14 @@
           </div>
         </div>
 
+        <p style="color: #525252" class="text-center">Find all the metadata on <a
+            href="https://github.com/portofportlandgis/open-data" target="_blank" style="color: #1c8de0;"><i
+              class="fab fa-github"></i> <b>Github</b></a></p>
+
+        <br>
+
+              
+
       </div>
     </div>
 </body>
@@ -495,7 +503,7 @@
         tools using Bootstrap and Mapbox GL.
         Check out the
         <a href="https://cdettlaff.github.io./" target="_blank" style="color: #1c8de0;"> <b>demo</b></a> or get the code on <a
-        href="https://github.com/portofportlandgis/portmap" target="_blank" style="color: #1d1d1d;"><i
+        href="https://github.com/portofportlandgis/portmap" target="_blank" style="color: #1c8de0;"><i
           class="fab fa-github"></i> <b>Github</b>.</a>
       </p>
 
@@ -559,7 +567,7 @@
         It's basically a starting point to easily attach additional Turf.js spatial analysis tools.
         What's already included is a lat/lng finder, center of mass, buffer, great circle, polygon grid, feature
         measurement, and coordinate array. Check it out at <a
-          href="https://github.com/portofportlandgis/portmap-analyst" target="_blank" style="color: #1d1d1d;"><i
+          href="https://github.com/portofportlandgis/portmap-analyst" target="_blank" style="color: #1c8de0;"><i
             class="fab fa-github"></i> <b>Github</b>.</a>
       </p>
 
@@ -647,7 +655,7 @@
 
   Find the repo on 
   <a
-      href="https://github.com/PortOfPortland/gitrob" target="_blank" style="color: #1d1d1d;"><i
+      href="https://github.com/PortOfPortland/gitrob" target="_blank" style="color: #1c8de0;"><i
         class="fab fa-github"></i> <b>Github</b></a>
 </p>
 
@@ -697,7 +705,7 @@
 
     Find the repo on 
     <a
-        href="https://github.com/PortOfPortland/terraform-provider-windns" target="_blank" style="color: #1d1d1d;"><i
+        href="https://github.com/PortOfPortland/terraform-provider-windns" target="_blank" style="color: #1c8de0;"><i
           class="fab fa-github"></i> <b>Github</b></a>
   </p>
 
@@ -752,7 +760,7 @@
 
     Find the repo on 
     <a
-        href="https://github.com/PortOfPortland/terraform-provider-activedirectory" target="_blank" style="color: #1d1d1d;"><i
+        href="https://github.com/PortOfPortland/terraform-provider-activedirectory" target="_blank" style="color: #1c8de0;"><i
           class="fab fa-github"></i> <b>Github</b></a>
 
   </p>
@@ -810,7 +818,7 @@
     <p style="color: #525252" class="text-center">This API returns global elevation values using Mapbox Elevation and
       AWS Lambda. With Serverless Framework,
       the API can be deployed to AWS in seconds. Deployment instructions are on <a
-        href="https://github.com/portofportlandgis/getElevationAPI" target="_blank" style="color: #1d1d1d;"><i
+        href="https://github.com/portofportlandgis/getElevationAPI" target="_blank" style="color: #1c8de0;"><i
           class="fab fa-github"></i> <b>Github</b>.</a>
     </p>
 
