--- a/tutorial.html
+++ b/tutorial.html
@@ -201,7 +201,7 @@
       <br>
 
       <p style="color: #525252">Copy the unzipped  <i class="fa fa-folder"></i><b> portmap-master </b> folder somewhere on your computer's file system. For example, use 
-        <b>C Drive</b> on Windows or <b>/documnets</b> on Mac OS.   
+        <b>C Drive</b> on Windows or <b>/documents</b> on Mac OS.   
       </p>
 
       <br>
@@ -318,7 +318,7 @@ mapboxgl.accessToken = 'paste mapbox access token here';
         Second is adding the data source layer configuration. Third is connecting the data to the interactive Layer Tree. The Layer Tree is a plugin built for PortMap that 
         allows the user to turn layers on and off. You can find more information about the Layer Tree Plugin 
         <a href="https://github.com/TheGartrellGroup/Mapbox-GL-JS-Layer-Tree" target="_blank" style="color: #1c8de0;"><i
-        class="fas fa-link"></i> <b>here</b>.</a> Lets start with adding the data source:</p>
+        class="fas fa-link"></i> <b>here</b>.</a> Let's start with adding the data source:</p>
 
       <br>
 
@@ -363,7 +363,7 @@ mapboxgl.accessToken = 'paste mapbox access token here';
 
       <br>
 
-      <p style="color: #525252">Now lets add the data source:<p>
+      <p style="color: #525252">Now let's add the data source:<p>
 
       <br>
 
@@ -625,7 +625,7 @@ map.on('mousemove', function (e) {
       <br>
 
       <p style="color: #525252">Take notice of how the GeoJSON is structured, particularly the nested <b>"properties"</b> of each Lake feature.
-      This is were you'll find information about each of the lakes in the GeoJSON. Below is a segment from the <i class="fa fa-file"></i><b> lakes.geojson</b> file:</p>
+      This is where you'll find information about each of the lakes in the GeoJSON. Below is a segment from the <i class="fa fa-file"></i><b> lakes.geojson</b> file:</p>
 
       <br>
 
