rename tutorial page

--- a/index.html
+++ b/index.html
@@ -505,6 +505,10 @@
         <a href="https://cdettlaff.github.io./" target="_blank" style="color: #1c8de0;"> <b>demo</b></a> or get the code on <a
         href="https://github.com/portofportlandgis/portmap" target="_blank" style="color: #1c8de0;"><i
           class="fab fa-github"></i> <b>Github</b>.</a>
+          New to coding? No worries. We created a tutorial that's designed to teach you how access PortMap, 
+          add geographic data, and make that data interactive. You can find the tutorial
+          <a href="https://opensource.portofportland.io/portmap-tutorial.html" target="_blank" style="color: #1c8de0;"><i class="fas fa-link"></i><b> here</b></a>
+
       </p>
 
       <br>
