--- a/portmap-tutorial.html
+++ b/portmap-tutorial.html
@@ -152,7 +152,7 @@
       <br>
 
       <ul style="color: #525252; line-height: 2em;">
-        <li><a href="https://code.visualstudio.com/Download" target="_blank" style="color: #1c8de0;"><i class="fas fa-link"></i><b> Visual Studios Code</b></a></li>
+        <li><a href="https://code.visualstudio.com/Download" target="_blank" style="color: #1c8de0;"><i class="fas fa-link"></i><b> Visual Studio Code</b></a></li>
         <li><a href="https://www.sublimetext.com/" target="_blank" style="color: #1c8de0;"><i class="fas fa-link"></i><b> Sublime Text</b></a></li>
         <li><a href="https://atom.io/" target="_blank" style="color: #1c8de0;"><i class="fas fa-link"></i><b> Atom</b></a></li>
       </ul>  
