update portmap imgs

--- a/index.html
+++ b/index.html
@@ -514,38 +514,38 @@
       <br>
 
       <div class="slideshow-container">
-        <div class="mySlides1">
-          <img src="assets/img/portmap.png" style="width:100%">
+        <!-- <div class="mySlides1">
+          <img src="assets/img/1.png" style="width:100%">
           <div class="text">Portmap is a responsive web map application with built in geospatial tools.</div>
-        </div>
+        </div> -->
 
         <div class="mySlides1">
-          <img src="assets/img/layer-tree.png" style="width:100%">
+          <img src="assets/img/1.png" style="width:100%">
           <div class="text">Layer tree allows the user to interactively organize and reposition map layers.</div>
         </div>
 
         <div class="mySlides1">
-          <img src="assets/img/draw.png" style="width:100%">
+          <img src="assets/img/3.png" style="width:100%">
           <div class="text">Supports drawing and editing using Mapbox Draw API.</div>
         </div>
 
         <div class="mySlides1">
-          <img src="assets/img/print.png" style="width:100%">
+          <img src="assets/img/6.png" style="width:100%">
           <div class="text">Client side Print Export to PNG or PDF with legend.</div>
         </div>
 
         <div class="mySlides1">
-          <img src="assets/img/bookmark.png" style="width:100%">
-          <div class="text">Create geo-location bookmarks.</div>
+          <img src="assets/img/2.png" style="width:100%">
+          <div class="text">Identify features on the map.</div>
         </div>
 
         <div class="mySlides1">
-          <img src="assets/img/location.png" style="width:100%">
+          <img src="assets/img/5.png" style="width:100%">
           <div class="text">Location tools for finding addresses and lat/long coordinates.</div>
         </div>
 
         <div class="mySlides1">
-          <img src="assets/img/search.png" style="width:100%">
+          <img src="assets/img/4.png" style="width:100%">
           <div class="text">Search layer properties with autocomplete and zoom to feature.</div>
         </div>
 
