update analyst gallery

--- a/index.html
+++ b/index.html
@@ -580,32 +580,27 @@
 
       <div class="slideshow-container">
         <div class="mySlides2">
-          <img src="assets/img/edit.png" style="width:100%">
+          <img src="assets/img/1a.png" style="width:100%">
           <div class="text">Edit, export, or drag-n-drop JSON files.</div>
         </div>
 
         <div class="mySlides2">
-          <img src="assets/img/buffer.png" style="width:100%">
+          <img src="assets/img/2a.png" style="width:100%">
           <div class="text">Buffer selected features.</div>
         </div>
 
         <div class="mySlides2">
-          <img src="assets/img/grid.png" style="width:100%">
+          <img src="assets/img/3a.png" style="width:100%">
           <div class="text">Create custom grids.</div>
         </div>
 
         <div class="mySlides2">
-          <img src="assets/img/measure.png" style="width:100%">
+          <img src="assets/img/4a.png" style="width:100%">
           <div class="text">Live measurements as you draw features. </div>
         </div>
 
         <div class="mySlides2">
-          <img src="assets/img/great-circle.png" style="width:100%">
-          <div class="text">Create and calcualte distances of great circles.</div>
-        </div>
-
-        <div class="mySlides2">
-          <img src="assets/img/center-of-mass.png" style="width:100%">
+          <img src="assets/img/5a.png" style="width:100%">
           <div class="text">Identify the center of mass of a feature.</div>
         </div>
 
