update open data

--- a/index.html
+++ b/index.html
@@ -338,22 +338,14 @@
             </div>
 
 
-            <div class="filtr-item" data-category="1, 4" data-sort="Storm Water Pipes">
-              <!-- <div class="eyeball"><a
-                  href="https://github.com/portofportlandgis/open-data/blob/master/pop-stormwater-pipes.json"
-                  target="_blank"><i class="fas fa-eye"></i></a>
-              </div> -->
-              <img class="img-responsive" src="assets/img/storm-pipes.png" alt="Storm Water Pipes" />
+            <div class="filtr-item" data-category="1, 4" data-sort="Storm Water Features">
+              <img class="img-responsive" src="assets/img/storm-pipes.png" alt="Storm Water Features" />
               <span class="item-desc"><a
-                  href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-pipes.json"
-                  download="data.json" target="_blank">Storm Water Pipes</a></span>
+                  href="https://github.com/portofportlandgis/open-data/blob/master/README.md#port-stormwater-data"
+                   target="_blank">Storm Water Features</a></span>
             </div>
 
-            <div class="filtr-item" data-category="1, 4" data-sort="Storm Catch Basins">
-              <!-- <div class="eyeball"><a
-                  href="https://github.com/portofportlandgis/open-data/blob/master/pop-stormwater-catch-basins.json"
-                  target="_blank"><i class="fas fa-eye"></i></a>
-              </div> -->
+            <!-- <div class="filtr-item" data-category="1, 4" data-sort="Storm Catch Basins">
               <img class="img-responsive" src="assets/img/catch-basins.png" alt="Storm Manholes" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-catch-basins.json"
@@ -372,15 +364,11 @@
             </div>
 
             <div class="filtr-item" data-category="1, 4" data-sort="Storm Manholes">
-              <!-- <div class="eyeball"><a
-                  href="https://github.com/portofportlandgis/open-data/blob/master/pop-stormwater-manholes.json"
-                  target="_blank"><i class="fas fa-eye"></i></a>
-              </div> -->
               <img class="img-responsive" src="assets/img/manholes.png" alt="Storm Water Pipes" />
               <span class="item-desc"><a
                   href="https://raw.githubusercontent.com/portofportlandgis/open-data/master/pop-stormwater-manholes.json"
                   download="data.json" target="_blank">Storm Manholes</a></span>
-            </div>
+            </div> -->
 
 
             <div class="filtr-item" data-category="5" data-sort="Port Boundaries">
