new code section

--- a/index.html
+++ b/index.html
@@ -600,6 +600,52 @@
       <hr>
       <br>
 
+  <!-- geojson search-->
+  <!-- geojson search-->
+  <!-- geojson search-->
+
+    <h2 class="page-section-heading text-center text-secondary mb-0"><a
+      href="https://github.com/TheGartrellGroup/mapbox-gl-geojson-search" target="_blank" style="color:#1c8de0">
+      GeoJSON Search Control</a>
+  </h2>
+
+  <br>
+  <br>
+
+  <p style="color: #525252" class="text-center">
+    A plugin for Mapbox GL JS, the GeoJSON Search Control provides a way to enhance your geographic data into searchable features, 
+    allowing the user to explore JSON properties and find results on the map.
+  </p>
+
+  <br>
+  <br>
+
+  <div class="container d-flex align-items-center flex-column">
+
+    <img src="assets/img/globe-search.svg" height="120">
+
+  </div>
+
+  <br>
+  <br>
+
+
+  <p style="color: #525252" class="text-center">
+    The GeoJSON Search Control is a collaboration between the Port of Portland and 
+    <a href="https://www.gartrellgroup.com/" target="_blank" style="color: #1d1d1d;"> <b>The Gartrell Group.</b></a>
+
+    <br> 
+    <br> 
+
+    Find the repo on 
+    <a
+        href="https://github.com/TheGartrellGroup/mapbox-gl-geojson-search" target="_blank" style="color: #1c8de0;"><i
+          class="fab fa-github"></i> <b>Github</b></a>
+  </p>
+
+  <br>
+  <hr>
+  <br>
 
   <!-- gitrob-->
   <!-- gitrob-->
